--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ window.onload = _ => {
 }
 
 </script>
- <button id="connect" style="visibility: initial">Connect To WebUSB Device</button>
+ <button id="connect" style="visibility: initial; hight: 50px">Connect To WebUSB Device</button>
  <br><br><label for="title">Sender: </label> <br>
  <textarea id="editor", rows="25" cols="80" id="source">WebUSB!</textarea>
  <br><button id="submit">Send</button>
